--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="111">
   <meta name="author" content="862319606">
 
-  <title>John Doe - 111</title>
+  <title>Min Li - 111</title>
 111 222
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Min Li</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Audi.jpg" alt="Profile Picture">
       </span>
@@ -58,9 +58,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Min Li
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
+        <div class="subheading mb-5">History📚</div>
         <p class="lead mb-4">111<br><br>
 
         222<br><br>
